# Denoise

./: README.md
denoise/: CMakeLists.txt  denoise.kdev4  direct  main.cpp
denoise/include/: DirectWarpDenoiser.h  Mesh.h  MeshFlow.h  MotionDenoiser.h  MycalcopticalFlow.h  VideoIO.h  define.h  gridTracker.h  lock.h
denoise/source/: CMakeLists.txt  DirectWarpDenoiser.cpp  Fast_klt.cpp  Mesh.cpp  MeshFlow.cpp  MotionDenoiser.cpp  Untitled Document 4~  Untitled Document 5~  VideoIO.cpp  gridTracker.cpp
