cmake_minimum_required(VERSION 2.8)
set(OpenCV_DIR "/usr/local/opencv3/share/OpenCV")
PROJECT(VideoDenoiser)

find_package(OpenCV REQUIRED) 

SET(CMAKE_BUILE_TYPE RELEASE)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -fopenmp")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND!")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

SET(PROJECT_INCLUDE ${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS} ${PROJECT_INCLUDE})

set(EXTRA_LIBS ${EXTRA_LIBS} association)

ADD_EXECUTABLE(VideoDenoiser main.cpp)

TARGET_LINK_LIBRARIES(VideoDenoiser ${OpenCV_LIBS} ${EXTRA_LIBS})

add_subdirectory(source)